@@ -32,25 +32,14 @@
 #include "kernel/error.h"
 #include "miosix.h"
 #include "portability_impl.h"
+#include "kernel/scheduler/scheduler.h"
+#include "kernel/scheduler/tick_interrupt.h"
 #include <algorithm>
 
 using namespace std;
 
 //Used by the BSP. TODO: move this code into the "kernel thread"
 void tickHook();
-
-//These are defined in kernel.cpp
-namespace miosix {
-
-//Used by ISR_preempt
-extern unsigned char kernel_running;
-extern volatile bool tick_skew;
-extern volatile Thread *cur;
-
-//Used by ISR_preempt and ISR_yield
-extern bool IRQwakeThreads();
-
-}; //namespace miosix
 
 namespace miosix_private {
 
@@ -68,23 +57,8 @@ void ISR_preempt()
     VICVectAddr=0xff;//Restart VIC
     
     IRQstackOverflowCheck();
-    bool woken=miosix::IRQwakeThreads();//Increment tick and wake threads,if any
-    (void)woken; //Avoid unused variable warning.
+    miosix::IRQtickInterrupt();
 
-    #ifndef SCHED_TYPE_CONTROL_BASED
-    //With the control based scheduler preemption happens in the auxTimer
-    //routine since burst length is variable
-    miosix::Scheduler::IRQfindNextThread();//If the kernel is running, preempt
-    if(miosix::kernel_running!=0) miosix::tick_skew=true;//The kernel is not running
-    #else //SCHED_TYPE_CONTROL_BASED
-    //Normally, with the control based scheduler, preemptions do not happen
-    //here, but in the auxiliary timer interrupt to take into account variable
-    //bursts. But there is one exception: when a thread wakes up from sleep
-    //and the idle thread is running.
-    if(woken && miosix::cur==miosix::ControlScheduler::IRQgetIdleThread())
-        miosix::Scheduler::IRQfindNextThread();
-    #endif //SCHED_TYPE_CONTROL_BASED
-    
     tickHook();
 }
 
